[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/ProjectScreen.gd" type="Script" id=1]

[node name="ProjectScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="LeftGrid" type="GridContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="CenterGrid" type="GridContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="MakeMigrations" type="Button" parent="CenterGrid"]
margin_right = 117.0
margin_bottom = 20.0
text = "Make Migrations"

[node name="Migrate" type="Button" parent="CenterGrid"]
margin_top = 24.0
margin_right = 117.0
margin_bottom = 44.0
text = "Migrate"

[node name="RunServer" type="Button" parent="CenterGrid"]
margin_top = 48.0
margin_right = 117.0
margin_bottom = 68.0
text = "Run Server"

[node name="StopServer" type="Button" parent="CenterGrid"]
margin_top = 72.0
margin_right = 117.0
margin_bottom = 92.0
text = "Stop Server"

[node name="RightGrid" type="GridContainer" parent="."]

[node name="OutputPanel" type="Panel" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Output" type="Label" parent="OutputPanel"]
margin_right = 40.0
margin_bottom = 14.0

[connection signal="button_down" from="CenterGrid/MakeMigrations" to="." method="_on_MakeMigrations_button_down"]
[connection signal="button_down" from="CenterGrid/Migrate" to="." method="_on_Migrate_button_down"]
[connection signal="button_down" from="CenterGrid/RunServer" to="." method="_on_RunServer_button_down"]
[connection signal="button_down" from="CenterGrid/StopServer" to="." method="_on_StopServer_button_down"]
